--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,24 +1,19 @@
 .footer-bottom {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-evenly;
 };
 
-.tru {
+* {
   text-decoration: none;
-  font-size: 50px;
   display: block;
 }
 
-.tru2 {
-  text-decoration: none;
-  display: block;
-}
 
 .footer {
   text-decoration: none;
   margin-top: 50px;
   margin-bottom: 50px;
 };
+
 
